--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,8 @@
+// google font
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap");
+
+@import "./variables.scss";
+
 * {
   margin: 0;
   padding: 0;
@@ -7,4 +12,10 @@
 a {
   text-decoration: none;
   color: inherit;
+}
+
+body {
+  background: $main-bg;
+  font-family: "Open Sans", sans-serif;
+  color: #fff;
 }
